# RayTracer

./: CMakeLists.txt  README.md  test.ppm
include/: camera.h  color.h  interval.h  material.h  math_utils.h  ray.h  sphere.h  surface.h  surface_list.h  vec3d.h
src/: camera.cpp  main.cpp  material.cpp  sphere.cpp  surface_list.cpp
